[gd_scene load_steps=32 format=2]

[ext_resource path="res://Ball.gd" type="Script" id=1]
[ext_resource path="res://img/whale.png" type="Texture" id=2]
[ext_resource path="res://img/whale_air.png" type="Texture" id=3]
[ext_resource path="res://img/whale_down.png" type="Texture" id=4]
[ext_resource path="res://img/whale_tear1.png" type="Texture" id=5]
[ext_resource path="res://img/whale_tear2.png" type="Texture" id=6]
[ext_resource path="res://img/whale_tear3.png" type="Texture" id=7]
[ext_resource path="res://music/fxs/explode2.wav" type="AudioStream" id=8]
[ext_resource path="res://music/fxs/splash.wav" type="AudioStream" id=9]
[ext_resource path="res://img/splash1.png" type="Texture" id=10]
[ext_resource path="res://img/splash2.png" type="Texture" id=11]
[ext_resource path="res://img/whale_ouch2.png" type="Texture" id=12]
[ext_resource path="res://img/whale_ouch1.png" type="Texture" id=13]
[ext_resource path="res://img/whale_ouch3.png" type="Texture" id=14]
[ext_resource path="res://music/fxs/jump.wav" type="AudioStream" id=15]
[ext_resource path="res://music/game over.wav" type="AudioStream" id=16]
[ext_resource path="res://music/val fin.wav" type="AudioStream" id=17]
[ext_resource path="res://img/strandad val.png" type="Texture" id=18]
[ext_resource path="res://img/spray.png" type="Texture" id=19]
[ext_resource path="res://img/vote1.png" type="Texture" id=20]
[ext_resource path="res://img/vote2.png" type="Texture" id=21]
[ext_resource path="res://img/vote3.png" type="Texture" id=22]
[ext_resource path="res://img/voteempty.png" type="Texture" id=23]
[ext_resource path="res://music/fxs/take2.wav" type="AudioStream" id=24]
[ext_resource path="res://img/notwin.png" type="Texture" id=25]
[ext_resource path="res://music/fxs/dash3.wav" type="AudioStream" id=26]
[ext_resource path="res://img/gamecleared.png" type="Texture" id=27]
[ext_resource path="res://img/akta.png" type="Texture" id=28]
[ext_resource path="res://img/ouch.png" type="Texture" id=29]

[sub_resource type="CapsuleShape2D" id=1]
radius = 23.1285
height = 29.6696

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": false,
"name": "ouch",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "splash",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fly",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "chill",
"speed": 3.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "tear",
"speed": 5.0
} ]

[node name="Whale" type="RigidBody2D"]
collision_layer = 2
mode = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -7.37281, -7.71639 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimatedVal" type="AnimatedSprite" parent="."]
position = Vector2( -14, -7 )
frames = SubResource( 2 )
animation = "chill"
frame = 1
playing = true

[node name="Tid" type="RichTextLabel" parent="."]
margin_left = -432.566
margin_top = -389.284
margin_right = -372.566
margin_bottom = -369.284
text = "Tid:"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="RichTextLabel" parent="."]
margin_left = -402.566
margin_top = -389.284
margin_right = -342.566
margin_bottom = -369.284
text = "0"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -7.0

[node name="Splash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -15.241

[node name="Jump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -10.546

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -14.0

[node name="Win" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -8.025

[node name="Take" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 24 )
volume_db = -6.0

[node name="GameOverSign" type="Sprite" parent="."]
visible = false
position = Vector2( 1.7818, -85.5262 )
texture = ExtResource( 18 )

[node name="GameOverAkta" type="Sprite" parent="."]
visible = false
position = Vector2( 1.7818, -85.5262 )
texture = ExtResource( 28 )

[node name="GameOverOuch" type="Sprite" parent="."]
visible = false
position = Vector2( 1.7818, -85.5262 )
texture = ExtResource( 29 )

[node name="Spray" type="Sprite" parent="."]
visible = false
position = Vector2( -1.38615, -47.8111 )
texture = ExtResource( 19 )

[node name="Vote4" type="Sprite" parent="."]
position = Vector2( 444.108, -357.955 )
texture = ExtResource( 23 )

[node name="Vote5" type="Sprite" parent="."]
position = Vector2( 484.108, -357.955 )
texture = ExtResource( 23 )

[node name="Vote6" type="Sprite" parent="."]
position = Vector2( 525.108, -357.955 )
texture = ExtResource( 23 )

[node name="Vote1" type="Sprite" parent="."]
visible = false
position = Vector2( 444.108, -357.955 )
texture = ExtResource( 20 )

[node name="Vote2" type="Sprite" parent="."]
visible = false
position = Vector2( 484.108, -357.955 )
texture = ExtResource( 21 )

[node name="Vote3" type="Sprite" parent="."]
visible = false
position = Vector2( 525.108, -357.955 )
texture = ExtResource( 22 )

[node name="NotWin" type="Sprite" parent="."]
visible = false
position = Vector2( 169.525, -90.769 )
texture = ExtResource( 25 )

[node name="CourseTimer" type="Timer" parent="."]
wait_time = 100000.0
one_shot = true
autostart = true

[node name="NotWinTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="WinText" type="RichTextLabel" parent="."]
visible = false
margin_left = -61.6597
margin_top = -214.115
margin_right = 138.341
margin_bottom = -174.115
custom_colors/default_color = Color( 0, 0, 0, 1 )
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bbonus" type="RichTextLabel" parent="."]
visible = false
margin_left = -76.0723
margin_top = -193.479
margin_right = 123.928
margin_bottom = -153.479
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "[B] för bonusbana
[R] för huvudmenyn"
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
volume_db = -10.0

[node name="CourseCleared" type="Sprite" parent="."]
visible = false
position = Vector2( -7.93701, -268.271 )
texture = ExtResource( 27 )
[connection signal="animation_finished" from="AnimatedVal" to="." method="_on_AnimatedVal_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="NotWinTimer" to="." method="_on_NotWinTimer_timeout"]
